--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
+   <link rel="icon" href="https://img5.pic.in.th/file/secure-sv1/10777857.md.png" type="image/png">
   <title>N-AGE WARZONE UPGRADE</title>
   <style>
   body { font-family: sans-serif; background: #fff4ee; padding: 20px; }
